--- a/rebar.config
+++ b/rebar.config
@@ -27,7 +27,7 @@
 %% Common project dependencies.
 {deps, [
     {jsx, "2.8.2"},
-    {rfc3339, "0.9.0"}
+    {rfc3339, {git,"https://github.com/rbkmoney/rfc3339.git", {branch, "master"}}}
 ]}.
 
 %% XRef checks
