--- a/rebar.config
+++ b/rebar.config
@@ -26,8 +26,8 @@
 
 %% Common project dependencies.
 {deps, [
-    {jsx, "2.8.2"},
-    {rfc3339, "0.2.2"}
+    {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", {tag, "2.8.2"}}},
+    {rfc3339, ".*", {git, "https://github.com/talentdeficit/rfc3339.git", {tag, "0.2.2"}}}
 ]}.
 
 %% XRef checks
@@ -45,7 +45,7 @@
 
 {profiles, [
     {test, [
-        {deps, [{lager, "3.2.1"}]}
+        {deps, [{lager, ".*", {git, "https://github.com/erlang-lager/lager.git", {tag, "3.2.1"}}}]}
     ]}
 ]}.
 
