--- a/rebar.config
+++ b/rebar.config
@@ -26,8 +26,8 @@
 
 %% Common project dependencies.
 {deps, [
-    {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", {tag, "2.8.2"}}},
-    {rfc3339, ".*", {git, "https://github.com/talentdeficit/rfc3339.git", {tag, "0.2.2"}}}
+    {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", {tag, "2.5.0"}}},
+    {rfc3339, ".*", {git, "https://github.com/talentdeficit/rfc3339.git", {ref, "6cce18dc"}}}
 ]}.
 
 %% XRef checks
