Fix date formatter

--- a/rebar.config
+++ b/rebar.config
@@ -26,8 +26,7 @@
 
 %% Common project dependencies.
 {deps, [
-    {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", {tag, "2.5.3"}}},
-    {rfc3339, ".*", {git, "https://github.com/talentdeficit/rfc3339.git", "6cce18dc"}}
+    {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", {tag, "2.5.3"}}}
 ]}.
 
 %% XRef checks
